--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,7 +73,7 @@ jobs:
         with:
           repository: CoreumFoundation/crust
           path: crust
-          ref: tmp-delay # TODO (wojtek): remove once delay is included in crust
+          ref: wojtek/versioned-genesis # TODO (wojtek): remove once genesis versioning is included in crust
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Setup go cache
