--- a/integration-tests/modules/testdata/wasm/nft/Cargo.toml
+++ b/integration-tests/modules/testdata/wasm/nft/Cargo.toml
@@ -2,7 +2,7 @@
 name = "nft"
 version = "0.1.0"
 authors = ["Coreum"]
-edition = "2018"
+edition = "2021"
 
 exclude = [
     "nft.wasm",
@@ -28,15 +28,12 @@ backtraces = ["cosmwasm-std/backtraces"]
 library = []
 
 [dependencies]
-cosmwasm-std = "1.0.0"
-cosmwasm-storage = "1.0.0"
-cw-storage-plus = "0.13.2"
-cw2 = "0.13.2"
-schemars = "0.8.8"
-serde = { version = "1.0.137", default-features = false, features = ["derive"] }
-thiserror = { version = "1.0.31" }
-coreum-wasm-sdk = { version = "0.1.0" }
+cosmwasm-std = "1.2.5"
+cosmwasm-storage = "1.2.5"
+cw-storage-plus = "1.0.1"
+cw2 = "1.0.1"
+thiserror = { version = "1.0.40" }
+coreum-wasm-sdk = { path = "./packages/coreum-wasm-sdk" }
+cosmwasm-schema = "1.2.6"
+cw-ownable = "0.5.1"
 
-[dev-dependencies]
-cosmwasm-schema = "1.0.0"
-cw-multi-test = "0.13.2"
