--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,6 +73,7 @@ jobs:
         with:
           repository: CoreumFoundation/crust
           path: crust
+          ref: dzmitryhil/wasm-contracts-build # FIXME remove once merged
       - name: Set up crust
         run: echo "$(pwd)/crust/bin" >> $GITHUB_PATH
       - name: Setup go cache
